deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: version-deploy
  labels:
    app: version-deploy
    version: red
spec:
  replicas: 1
  selector:
    matchLabels:
      app: version-deploy
      version: red
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: version-deploy
        version: red
    spec:
      containers:
        - name: versioner
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: "50m"
          image: jonwoodlief/go-api:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: version-deploy
    service: version-service
  name: version-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: version-deploy
  type: ClusterIP
