istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtserv
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: version-service
        subset: red
        port:
          number: 80
      weight: 33
    - destination:
        host: version-service
        subset: green
        port:
          number: 80
      weight: 33
    - destination:
        host: version-service
        subset: blue
        port:
          number: 80
      weight: 34
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: version-service
spec:
    host: version-service
    subsets:
    - name: red
      labels:
        version: red
    - name: green
      labels:
        version: green
    - name: blue
      labels:
        version: blue
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
